--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-<body>
-  <script src="./index.js"></script>
-</body>
+  <body>
+    <script src="dist/index.js"></script>
+    Hello
+  </body>
 </html>
